--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -20,6 +20,9 @@ jobs:
       - run: npm ci
 
       - run: npm run build
+        env: 
+          TURBO_TOKEN: 72H12GtKEzRmCVv8sNMwJ3cl
+          TURBO_TEAM: palamar
 
       - name: Deploy storybook
         working-directory: ./packages/docs
