--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "release": "turbo run build --filter=packages/docs && changeset publish"
   },
   "dependencies": {
+    "@radix-ui/react-popover": "^1.0.2",
+    "@radix-ui/react-select": "^1.1.1",
     "@stitches/react": "^1.2.8"
   },
   "devDependencies": {
