--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@radix-ui/react-avatar": "^1.0.1",
     "@radix-ui/react-checkbox": "^1.0.1",
+    "@radix-ui/react-navigation-menu": "^1.1.1",
     "@radix-ui/react-radio-group": "^1.1.0",
     "@radix-ui/react-switch": "^1.0.1",
     "@radix-ui/react-toast": "^1.1.1",
