--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@radix-ui/react-popover": "^1.0.2",
+    "@radix-ui/react-radio-group": "^1.1.0",
     "@radix-ui/react-select": "^1.1.1",
+    "@radix-ui/react-toast": "^1.1.2",
     "@stitches/react": "^1.2.8"
   },
   "devDependencies": {
