--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@palamar-ui/react",
-  "version": "3.0.0",
+  "version": "4.0.0",
   "description": "",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -24,8 +24,10 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.0.1",
     "@radix-ui/react-avatar": "^1.0.1",
     "@radix-ui/react-checkbox": "^1.0.1",
+    "@radix-ui/react-label": "^2.0.0",
     "@radix-ui/react-navigation-menu": "^1.1.1",
     "@radix-ui/react-radio-group": "^1.1.0",
     "@radix-ui/react-switch": "^1.0.1",
